# signaldesk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/signaldesk/: __init__.py  __main__.py  app.py  config.py  credentials.py  history.py  icons.py  mock_server.py  models.py  notifications.py  policies.py  reliability.py  richtext.py  single_instance.py  socket_client.py  sounds.py  startup.py  theme.py  window.py
tests/: test_app_features.py  test_config.py  test_credentials.py  test_history.py  test_mock_server.py  test_models.py  test_policies.py  test_reliability.py  test_richtext.py  test_single_instance.py  test_socket_client.py  test_sounds.py  test_startup.py  test_ui_smoke.py
